All form pages linked and working

--- a/html-cheat-sheet/Pages/Forms/Form Pages/Form Elements/datalist.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Form Elements/datalist.html
@@ -26,7 +26,8 @@
         <img src="/Users/marceldurgante/Documents/Assembler/html-cheat-sheet/Images/datalist-code.png">
         <br>
         <br>
-        <a href="form-elements.html">Return</a>
+        <a
+            href="/Users/marceldurgante/Documents/Assembler/html-cheat-sheet2-/html-cheat-sheet/Pages/Forms/Form Pages/Form Elements/form-elements.html">Return</a>
     </section>
 </body>
 
