--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Attributes/value.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Attributes/value.html
@@ -28,7 +28,7 @@
         <div style="background:#e4eff1">
             <p>&lt;button&gt; Example:
                 <br><br>
-Two buttons with equal names, that submit different values when clicked:
+                Two buttons with equal names, that submit different values when clicked:
             </p>
             <hr>
             <code>
@@ -49,33 +49,33 @@ Two buttons with equal names, that submit different values when clicked:
             </samp>
             <br>
 
-<p>&lt;input&gt; Example:
-    <br><br>
-An HTML form with initial (default) values:
-</p>
-<hr>
-<code>
-    <pre>
+            <p>&lt;input&gt; Example:
+                <br><br>
+                An HTML form with initial (default) values:
+            </p>
+            <hr>
+            <code>
+                <pre>
                     &lt;form action="/action_page.php"&gt;
                     First name: &lt;input type="text" name="fname" value="John"&gt;&lt;br&gt;
                     Last name: &lt;input type="text" name="lname" value="Doe"&gt;&lt;br&gt;
                     &lt;input type="submit" value="Submit form"&gt;
                     &lt;/form&gt;
                 </pre>
-</code>
-<samp>
-    <form action="/action_page.php">
-        First name: <input type="text" name="fname" value="John"><br>
-        Last name: <input type="text" name="lname" value="Doe"><br>
-        <input type="submit" value="Submit form">
-    </form>
-</samp>
-<br>
-
+            </code>
+            <samp>
+                <form action="/action_page.php">
+                    First name: <input type="text" name="fname" value="John"><br>
+                    Last name: <input type="text" name="lname" value="Doe"><br>
+                    <input type="submit" value="Submit form">
+                </form>
+            </samp>
+            <br>
         </div>
         <br>
         <br>
-        <a href="form-elements.html">Return</a>
+        <a
+            href="/Users/marceldurgante/Documents/Assembler/html-cheat-sheet2-/html-cheat-sheet/Pages/Forms/Form Pages/Input Attributes/input-attributes.html">Return</a>
     </section>
 </body>
 
