--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/checkbox.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/checkbox.html
@@ -48,7 +48,8 @@ Let the user select one or more options of a limited number of choices:
         </div>
         <br>
         <br>
-        <a href="form-elements.html">Return</a>
+        <a
+            href="input-types.html">Return</a>
     </section>
 </body>
 
