--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/color.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/color.html
@@ -48,7 +48,8 @@ Show a color picker (with a predefined red value):
         </div>
         <br>
         <br>
-        <a href="form-elements.html">Return</a>
+        <a
+            href="input-types.html">Return</a>
     </section>
 </body>
 
