--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/date.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/date.html
@@ -48,7 +48,8 @@ Show a date control:
         </div>
         <br>
         <br>
-        <a href="form-elements.html">Return</a>
+        <a
+            href="input-types.html">Return</a>
     </section>
 </body>
 
