--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/email.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/email.html
@@ -63,7 +63,8 @@ Define a field for an e-mail address (validates automatically when submitted):
         </div>
         <br>
         <br>
-        <a href="form-elements.html">Return</a>
+        <a
+            href="input-types.html">Return</a>
     </section>
 </body>
 
