--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/hidden.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/hidden.html
@@ -53,7 +53,8 @@ Define a hidden field:
         </div>
         <br>
         <br>
-        <a href="form-elements.html">Return</a>
+        <a
+            href="input-types.html">Return</a>
     </section>
 </body>
 
