--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/input-types.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/input-types.html
@@ -97,7 +97,8 @@
         </div>
         <br>
         <br>
-        <a href="/index.html">Return</a>
+        <a
+            href="input-types.html">Return</a>
 
     </section>
 
