--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/submit.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/submit.html
@@ -51,7 +51,8 @@ Define a submit button:
         </div>
         <br>
         <br>
-        <a href="form-elements.html">Return</a>
+        <a
+            href="input-types.html">Return</a>
     </section>
 </body>
 
