--- a/html-cheat-sheet/Pages/Forms/forms.html
+++ b/html-cheat-sheet/Pages/Forms/forms.html
@@ -5,38 +5,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form Elements</title>
+    <title>Input Types</title>
 </head>
 
 <body>
-    <a href="index.html">Volver</a>
-    <section style="font-size: 20px">
-        <h1 style="font-size: 40px"><code>&lt;form&gt;</code></h1>
-        <p>
-            An <strong>HTML Form</strong> is used to collect user input. The user input is most often sent to a server
-            for processing.
+    <h1 style="text-align: center;">HTML Forms</h1>
 
+    <section>
+        <h2>form</h2>
+        <p>
             The <code style="color:red; font-size:16px"><strong>&lt;form&gt;</strong></code> element is a
             <strong>container</strong> for different types of input
             elements, such as:
             text fields, checkboxes, radio buttons, submit buttons, etc. It represents a document section
             containing interactive controls for submitting information.
-            <br>
-            <br>
+            <br><br>
+            An <strong>HTML Form</strong> is used
+            to collect user input. The user input is most often sent to a server
+            for processing.
+            <br><br>
             <u>All the different form elements are covered in
-                the list below:</u>
+            the list below:</u>
         </p>
-        <ul>
-            <li>
-                <a href="./Form Pages/Form Elements/form-elements.html" target="_blank">Form Elements</a>
-            </li>
-            <li>
-                <a href="./Form Pages/Input Attributes/input-attributes.html" target="_blank">Input Attributes</a>
-            </li>
-            <li>
-                <a href="./Form Pages/Input Types/input-types.html">Input Types</a>
-            </li>
-        </ul>
+        <br>
+        <div style="background:#e4eff1">Example:
+            <hr>
+            <ul style="text-decoration:none">
+                <li>
+                    <a href="./Form Pages/Form Elements/form-elements.html" target="_blank">Form Elements</a>
+                </li>
+                <li>
+                    <a href="./Form Pages/Input Attributes/input-attributes.html" target="_blank">Input Attributes</a>
+                </li>
+                <li>
+                    <a href="./Form Pages/Input Types/input-types.html">Input Types</a>
+                </li>
+            </ul>
+            <br>
+        </div>
+        <br>
+        <a href="/Users/marceldurgante/Documents/Assembler/html-cheat-sheet2-/html-cheat-sheet/index.html">Return</a>
     </section>
 </body>
 </html>
