--- a/html-cheat-sheet/index.html
+++ b/html-cheat-sheet/index.html
@@ -30,7 +30,8 @@
                 <li><a href="Pages/spacer.html">spacers</a></li>
                 <li><a href="Pages/table.html">Table</a></li>
                 <li><a href="Pages/media.html">Media</a></li>
-                <li><a href="Pages/forms.html">Forms</a></li>
+                <li><a href="Pages/Forms/forms.html">Forms</a>
+                </li>
             </ul>
         </section>
     </main>
