--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Attributes/type.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Attributes/type.html
@@ -53,6 +53,11 @@ Two button elements that act as one submit button and one reset button (in a for
             </samp>
             <br>
         </div>
+        <br>
+        <br>
+        <a
+            href="/Users/marceldurgante/Documents/Assembler/html-cheat-sheet2-/html-cheat-sheet/Pages/Forms/Form Pages/Input Attributes/input-attributes.html">Return</a>
+    </section>
 </body>
 
 </html>
