--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/buttontypes.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/buttontypes.html
@@ -51,7 +51,8 @@ Two <strong>button</strong> elements that act as one submit button and one reset
         </div>
         <br>
         <br>
-        <a href="form-elements.html">Return</a>
+        <a
+            href="input-types.html">Return</a>
     </section>
 </body>
 
