--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/image.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/image.html
@@ -58,7 +58,8 @@ Define an image as a submit button:
         </div>
         <br>
         <br>
-        <a href="form-elements.html">Return</a>
+        <a
+            href="input-types.html">Return</a>
     </section>
 </body>
 
