--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/number.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/number.html
@@ -55,7 +55,8 @@ Define a field for entering a number (You can also set restrictions on what numb
         </div>
         <br>
         <br>
-        <a href="form-elements.html">Return</a>
+        <a
+            href="input-types.html">Return</a>
     </section>
 </body>
 
