--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/range.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/range.html
@@ -54,7 +54,8 @@ Define a range control (like a slider control):
         </div>
         <br>
         <br>
-        <a href="form-elements.html">Return</a>
+        <a
+            href="input-types.html">Return</a>
     </section>
 </body>
 
