--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/reset.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/reset.html
@@ -59,7 +59,8 @@
         </div>
         <br>
         <br>
-        <a href="form-elements.html">Return</a>
+        <a
+            href="input-types.html">Return</a>
     </section>
 </body>
 
