--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/tel.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/tel.html
@@ -49,7 +49,8 @@
         </div>
         <br>
         <br>
-        <a href="form-elements.html">Return</a>
+        <a
+            href="input-types.html">Return</a>
     </section>
 </body>
 
