--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/text.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/text.html
@@ -50,7 +50,8 @@ Define a single-line text field that a user can enter text into:
         </div>
         <br>
         <br>
-        <a href="form-elements.html">Return</a>
+        <a
+            href="input-types.html">Return</a>
     </section>
 </body>
 
