--- a/html-cheat-sheet/Pages/button.html
+++ b/html-cheat-sheet/Pages/button.html
@@ -12,10 +12,10 @@
 
     <section>
         <h2>button</h2>
-        <section>La etiqueta de HTML <code>&lt;button&gt;</code> representa un elemento cliqueable de tipo botón que puede ser utilizado en formularios o en cualquier parte de la página que necesite un botón estándar y simple de aplicar.</section>
+        <section>The HTML tag <code>&lt;button&gt;</code> represents a clickable button element that can be used in forms or anywhere on the page that needs a standard and simple button to apply.</section>
         <br>
         <br>
-        <Article style="background:rgb(239, 241, 228)">Ejemplo:<hr>
+        <Article style="background:rgb(239, 241, 228)">Exemple:<hr>
             <code>&lt;button name="button"&gt;Click me&lt;/button&gt;</code><br>
             <br>
             <button name="button">Click me</button>
