--- a/html-cheat-sheet/Pages/images.html
+++ b/html-cheat-sheet/Pages/images.html
@@ -12,17 +12,17 @@
 
     <section>
         <h2>img</h2>
-        <section>El elemento de imagen HTML <code>&lt;img&gt;</code> representa una imagen en el documento.</section>
+        <section>the element image in html <code>&lt;img&gt;</code> represents an image in the document.</section>
         <br>
         <br>
-        <Article style="background:rgb(239, 241, 228)">Ejemplo:<hr>
-            <p>este es el codigo utilizado para poner la imagen siguiente :</p>
+        <Article style="background:rgb(239, 241, 228)">Exemple:<hr>
+            <p>this is the code used to put the following image:</p>
             <code>&lt;img src="http://placekitten.com/200/200"" alt="Gatos bonitos" width="180px" height="180px" &gt;</code>
             <br>
             <br>
             <img src="http://placekitten.com/200/200"" alt="Gatos bonitos" width="180px" height="180px" >
             <br>
-            <p>En esta imagen se rodea con la etiqueta <a href="links.html"><code>&lt;a&gt;</code></a> enlazando con la paguina web de los gatos</p>
+            <p>In this image it is surrounded with the label <a href="links.html"><code>&lt;a&gt;</code></a>linking to the cats website</p>
             <br>
             <a href="http://placekitten.com">
                 <img alt="Qries" src="http://placekitten.com/110/100"
