--- a/html-cheat-sheet/Pages/links.html
+++ b/html-cheat-sheet/Pages/links.html
@@ -12,7 +12,7 @@
 
     <section>
         <h2 id="Titulo">Link</h2>
-        <section>El Elemento HTML Anchor <code>&lt;a&gt;</code> crea un enlace a otras páginas de internet, archivos o ubicaciones dentro de la misma página, direcciones de correo, o cualquier otra URL.</section>
+        <section>The HTML A Element <code>&lt;a&gt;</code> creates a link to other internet pages, files or locations within the same page, email addresses, or any other URL.</section>
         <br>
         <br>
         <br>
@@ -51,16 +51,16 @@
         <br>
         <br>
         <br>
-        <Article style="background:rgb(239, 241, 228)">Ejemplo:<hr>
-            <p>Con este codigo haces un link a una pagina externa en una nueva pestaña</p>
-            <code>&lt;a href="https://www.google.com/" target="_blank"&gt; Google &lt;/a&gt;</code>
+        <Article style="background:rgb(239, 241, 228)">Exemple:<hr>
+            <p>With this code you make a link to an external page in a new tab</p>
+            <code>&lt;a href="https://www.google.com/" <strong> target="_blank"</strong>&gt; Google &lt;/a&gt;</code>
             <br>
             <a href="https://www.google.com/" target="_blank">Google</a>
             <br>
-            <p>con este otro codigo hacemos un link a otra pagina de la misma web</p>
+            <p>with this other code we make a link to another page of the same web</p>
             <code>&lt;a href="#Titulo"&gt; Subir pagina &lt;/a&gt;</code>
             <br>
-            <a href="#Titulo">Subir pagina</a>
+            <a href="#Titulo">Go up</a>
         </Article>
     </section>
 </body>
