--- a/html-cheat-sheet/Pages/lists.html
+++ b/html-cheat-sheet/Pages/lists.html
@@ -11,70 +11,70 @@
     <h1 style="text-align: center;">Listas</h1>
 
     <section>
-        <h2>Lista Ordenada</h2>
-        <section>El elemento ol permite definir listas o viñetas ordenadas (“Ordered List”), bien con numeración o alfabéticamente.
-        <br>Sus etiquetas son: <code>&lt;ol&gt; &lt;/ol&gt;</code>
+        <h2>Lista Ordered</h2>
+        <section>The ol element allows you to define ordered lists or bullets (“Ordered List”), either with numbering or alphabetically.
+        <br>its labels are: <code>&lt;ol&gt; &lt;/ol&gt;</code>
         </section>
         <br>
         <br>
-        <Article style="background:rgb(239, 241, 228)">Ejemplo:<hr>
-            <p>el codigo para hacer una lista ordenada es :</p>
+        <Article style="background:rgb(239, 241, 228)">Exemple:<hr>
+            <p>the code to make an ordered list is:</p>
             <code>&lt;ol&gt;  <br>
-                    &lt;il&gt;Punto uno &lt;/il&gt; <br>
-                    &lt;il&gt;Punto dos &lt;/il&gt; <br>
-                    &lt;il&gt;Punto tres &lt;/il&gt; <br>
+                    &lt;il&gt;Point one &lt;/il&gt; <br>
+                    &lt;il&gt;Point two &lt;/il&gt; <br>
+                    &lt;il&gt;Point three &lt;/il&gt; <br>
                 &lt;/ol&gt;</code>
-            <p>I asi es como quedaria en la web :</p>
+            <p>And this is how it would look on the web:</p>
             <ol>
-                <li>punto uno</li>
-                <li>punto dos</li>
-                <li>punto tres</li>
+                <li>Point one</li>
+                <li>Point two</li>
+                <li>Point three</li>
             </ol>
         </Article>
     </section>
 
     <section>
-        <h2>Lista no ordenada</h2>
-        <section>ul de "unordered list" -lista no ordenada . crea una lista no ordenada.
-        <br>Sus etiquetas son: <code>&lt;ul&gt; &lt;/ul&gt;</code>
+        <h2>Unordered list</h2>
+        <section>ul from "unordered list" -unordered list. creates an unordered list.
+            <br> its labels are: <code>&lt;ul&gt; &lt;/ul&gt;</code>
         </section>
         <br>
         <br>
-        <Article style="background:rgb(239, 241, 228)">Ejemplo:<hr>
-            <p>el codigo para hacer una lista no ordenada es :</p>
+        <Article style="background:rgb(239, 241, 228)">Exemple:<hr>
+            <p>the code to make an unordered list is:</p>
             <code>&lt;ul&gt;  <br>
-                    &lt;il&gt;Punto uno &lt;/il&gt; <br>
-                    &lt;il&gt;Punto dos &lt;/il&gt; <br>
-                    &lt;il&gt;Punto tres &lt;/il&gt; <br>
+                    &lt;il&gt;Point one &lt;/il&gt; <br>
+                    &lt;il&gt;Point two &lt;/il&gt; <br>
+                    &lt;il&gt;Point three &lt;/il&gt; <br>
                 &lt;/ul&gt;</code>
-            <p>I asi es como quedaria en la web :</p>
+            <p>And this is how it would look on the web:</p>
             <ul>
-                <li>punto uno</li>
-                <li>punto dos</li>
-                <li>punto tres</li>
+                <li>Point one</li>
+                <li>Point two</li>
+                <li>Point three</li>
             </ul>
         </Article>
     </section>
 
     <section>
-        <h2>elemento de lista</h2>
-        <section>El elemento li del ingles item list o elemento de lista declara cada uno de los elementos de una lista.
-        <br>Sus etiquetas son: <code>&lt;il&gt; &lt;/il&gt;</code>
+        <h2>List element</h2>
+        <section>The li element of the English item list or list element declares each of the elements of a list.
+        <br>its labels are: <code>&lt;il&gt; &lt;/il&gt;</code>
         </section>
         <br>
         <br>
-        <Article style="background:rgb(239, 241, 228)">Ejemplo:<hr>
-            <p>el codigo para hacer un il es primero haciendo un ul o ol para despues poner el il por cada elemento dentro de la lista :</p>
+        <Article style="background:rgb(239, 241, 228)">Exemple:<hr>
+            <p>The code to make an il is first making an ul or ol and then putting the il for each element within the list:</p>
             <code>&lt;ul&gt;  <br>
-                    &lt;il&gt;Punto uno &lt;/il&gt; <br>
-                    &lt;il&gt;Punto dos &lt;/il&gt; <br>
-                    &lt;il&gt;Punto tres &lt;/il&gt; <br>
+                    &lt;il&gt;Point one   &lt;/il&gt; <br>
+                    &lt;il&gt;Point two     &lt;/il&gt; <br>
+                    &lt;il&gt;Point three  &lt;/il&gt; <br>
                 &lt;/ul&gt;</code>
-            <p>I asi es como quedaria en la web :</p>
+            <p>And this is how it would look on the web:</p>
             <ul>
-                <li>punto uno</li>
-                <li>punto dos</li>
-                <li>punto tres</li>
+                <li>Point one</li>
+                <li>Point two</li>
+                <li>Point three</li>
             </ul>
         </Article>
     </section>
