--- a/html-cheat-sheet/Pages/media.html
+++ b/html-cheat-sheet/Pages/media.html
@@ -11,16 +11,16 @@
     <h1 style="text-align: center;">Media</h1>
     <section>
         <h2>Audio</h2>
-        <p>El elemento audio se usa para insertar contenido de audio en un documento HTML</p>
+        <p>The audio element is used to insert audio content into an HTML document</p>
         <br>
         <br>
-        <Article style="background:rgb(239, 241, 228)">Ejemplo:<hr>
+        <Article style="background:rgb(239, 241, 228)">Exemple:<hr>
             <code>
                 &lt;audio controls&gt; <br>
                     &lt;source src="/cat-fight.mp3" type="audio/mpeg"&gt;<br>
                 &lt;/audio&gt; <br>
             </code>
-            <p>y esto es com se ve el codigo de arriba en la pagina web:</p>
+            <p>and this is how you see the code above on the web page:</p>
             <audio controls>
                 <source src="/cat-fight.mp3" type="audio/mpeg">
             </audio>
@@ -29,22 +29,22 @@
 
     <section>
         <h2>Video</h2>
-        <section> elemento video se utiliza para incrustar vídeos en un documento HTML</section>
+        <section> video element is used to embed videos in an HTML document</section>
         <br>
         <br>
-        <Article style="background:rgb(239, 241, 228)">Ejemplo:<hr>
+        <Article style="background:rgb(239, 241, 228)">Exemple:<hr>
             <video src="videofile.ogg" autoplay >
-                Tu navegador no admite el elemento <code>video</code>.
+                Your browser does not support the element <code>video</code>.
             </video>
         </Article>
     </section>
 
     <section>
         <h2>Iframe</h2>
-        <section> El elemento HTML iframe de (inline frame) representa un contexto de navegación anidado, el cual permite incrustrar otra página HTML en la página actual.</section>
+        <section> The HTML iframe element of (inline frame) represents a nested navigation context, which allows another HTML page to be embedded in the current page.</section>
         <br>
         <br>
-        <Article style="background:rgb(239, 241, 228)">Ejemplo:<hr>
+        <Article style="background:rgb(239, 241, 228)">Exemple:<hr>
             <iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1">
             </iframe>
         </Article>
