--- a/html-cheat-sheet/Pages/spacer.html
+++ b/html-cheat-sheet/Pages/spacer.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <a href="/index.html">Volver</a>
-    <h1 style="text-align: center;">Espaciadores</h1>
+    <h1 style="text-align: center;">Spacer</h1>
     <h2>br</h2>
-    <p> <code> < br> </code>   es un una etiqueta para pasar a la siguiente linea</p>
+    <p> <code> &lt;br&gt; </code> this label to go to the next line  </p>
 
-    <div style="background:rgb(239, 241, 228)">Ejemplo:<hr> soy una linea <code>< br></code> <br> y yo otra en el mismo bloke<code>< br></code><br> gracias al br</div>
+    <div style="background:rgb(239, 241, 228)">Exemple:<hr> i'm a line<code>&lt;br&gt;</code> <br> and i another line in the same block<code>&lt;br></code><br> thanks to the br</div>
     <h2>hr</h2>
-    <p><code>< hr></code> es una etiqueta para separar diferentes blokes con una linea</p>
-    <div style="background:rgb(239, 241, 228)">Ejemplo:<hr> esta linea que separa es la etqueta <code>< hr></code></div>
+
+    <p><code>&lt;hr&gt;</code> </p> it's a label  to separate different blokes with a line
+    <div style="background:rgb(239, 241, 228)">Exemple:<hr> this line that separates is the label<code>&lt;hr&gt;</code></div>
 </body>
 </html>
