--- a/html-cheat-sheet/Pages/table.html
+++ b/html-cheat-sheet/Pages/table.html
@@ -12,12 +12,12 @@
 
     <section>
         <h2>Table</h2>
-        <section>El Elemento de Tabla HTML representa datos en dos o mas dimensiones.
-        <br>Sus etiquetas son: <code>&lt;table&gt; &lt;/table&gt;</code>
+        <section>The HTML Table Element represents data in two or more dimensions.
+        <br>its labels are: <code>&lt;table&gt; &lt;/table&gt;</code>
         </section>
         <br>
         <br>
-        <Article style="background:rgb(239, 241, 228)">Ejemplo:<hr>
+        <Article style="background:rgb(239, 241, 228)">Exemple:<hr>
             <p>codigo:</p>
             <pre><code>
     &lt;Table&gt;
@@ -35,7 +35,7 @@
         &lt;/tr&gt;
     &lt;/Table&gt;
             </code></pre>
-            <p>Vista en la pagina</p>
+            <p>As it looks on the page</p>
             <table style="background-color: brown;">
                 <tr>
                     <th>First name</th>
@@ -55,12 +55,12 @@
 
     <section>
         <h2>Fila tabla</h2>
-        <section>El elemento HTML fila de tabla (table row) <tr> define una fila de celdas en una tabla. Estas pueden ser una mezcla de elementos <code>&lt;td&gt; y &lt;th&gt;</code>
-        <br>Sus etiquetas son: <code>&lt;tr&gt; &lt;/tr&gt;</code>
+        <section>The HTML element table row (table row) &lt;tr&gt; defines a row of cells in a table. These can be a mix of <code> &lt;td&gt; elements. and &lt;th&gt;</code>
+        <br>its labels are: <code>&lt;tr&gt; &lt;/tr&gt;</code>
         </section>
         <br>
         <br>
-        <Article style="background:rgb(239, 241, 228)">Ejemplo:<hr>
+        <Article style="background:rgb(239, 241, 228)">Exemple:<hr>
             <table >
                 <tr style="background-color: brown;">
                     <th>First name</th>
@@ -81,13 +81,13 @@
 
 
     <section>
-        <h2>Cabezera de la tabla</h2>
-        <section>El elemento HTML define una celda como encabezado de un grupo de celdas en una tabla. La naturaleza exacta de este grupo está definida por los atributos scope y headers
-        <br>Sus etiquetas son: <code>&lt;th&gt; &lt;/th&gt;</code>
+        <h2>Table header</h2>
+        <section>The HTML element defines a cell as the heading for a group of cells in a table. The exact nature of this group is defined by the scope and headers attributes
+        <br>its labels are: <code>&lt;th&gt; &lt;/th&gt;</code>
         </section>
         <br>
         <br>
-        <Article style="background:rgb(239, 241, 228)">Ejemplo:<hr>
+        <Article style="background:rgb(239, 241, 228)">Exemple:<hr>
             <table>
                 <tr>
                     <th style="background-color: brown;">First name</th>
@@ -106,13 +106,13 @@
     </section>
 
     <section>
-        <h2>Datos de la tabla</h2>
-        <section>El elemento HTML Celda de tabla td define la celda de una tabla que contiene datos. Esta participa en el modelo de tablas.
-        <br>Sus etiquetas son: <code>&lt;td&gt; &lt;/td&gt;</code>
+        <h2>table cells</h2>
+        <section>The HTML element Table cell td defines the cell of a table that contains data. This participates in the table model.
+        <br>its labels are: <code>&lt;td&gt; &lt;/td&gt;</code>
         </section>
         <br>
         <br>
-        <Article style="background:rgb(239, 241, 228)">Ejemplo:<hr>
+        <Article style="background:rgb(239, 241, 228)">Exemple:<hr>
             <table>
                 <tr>
                     <th>First name</th>
