--- a/html-cheat-sheet/Pages/text.html
+++ b/html-cheat-sheet/Pages/text.html
@@ -8,73 +8,73 @@
 </head>
 <body>
     <a href="/index.html">Volver</a>
-    <h1 style="text-align: center;">Textos</h1>
+    <h1 style="text-align: center;">Text</h1>
 
     <section>
         <h2>Strong</h2>
-        <p>El elemento strong es el apropiado para marcar con especial énfasis las partes más importantes de un texto.
-        <br>Sus etiquetas son: <code>&lt;strong&gt; &lt;/strong&gt;</code></p>
+        <p>The strong element is appropriate to mark with special emphasis on the most important parts of a text.
+        <br>its labels are: <code>&lt;strong&gt; &lt;/strong&gt;</code></p>
         <br>
         <br>
-        <div style="background:rgb(239, 241, 228)">Ejemplo:<hr>
+        <div style="background:rgb(239, 241, 228)">Exemple:<hr>
             <p>
-                <strong>El dinero</strong> es importante pero <strong>la salud</strong> lo es más.
+                <strong>the money</strong> it is importan but <strong>health</strong> its more.
             </p>
         </div>
     </section>
 
     <section>
         <h2>Strikethrough</h2>
-        <p>El elemento HTML coloca un tachado (línea horizontal) sobre el texto.
-        <br>Sus etiquetas son: <code>&lt;strike&gt; &lt;/strike&gt;</code>
+        <p>The HTML element places a strikethrough (horizontal line) over the text.
+        <br>its labels are: <code>&lt;strike&gt; &lt;/strike&gt;</code>
         </p>
         <br>
         <br>
-        <div style="background:rgb(239, 241, 228)">Ejemplo:<hr>
+        <div style="background:rgb(239, 241, 228)">Exemple:<hr>
             <p>
-                <strike>El dinero</strike> es importante pero <strike>la salud</strike> lo es más.
+                <strike>the money</strike> it is importan but <strike>health</strike>  its more.
             </p>
         </div>
     </section>
 
     <section>
         <h2>Italics</h2>
-        <p>El elemento HTML es el apropiado para marcar con énfasis las partes importantes de un texto.
-        <br>Sus etiquetas son: <code>&lt;em&gt; &lt;/em&gt;</code>
+        <p>The HTML element is the appropriate one to emphasize the important parts of a text.
+        <br>its labels are: <code>&lt;em&gt; &lt;/em&gt;</code>
         </p>
         <br>
         <br>
-        <div style="background:rgb(239, 241, 228)">Ejemplo:<hr>
+        <div style="background:rgb(239, 241, 228)">Exemple:<hr>
             <p>
-                <em>El dinero</em> es importante pero <em>la salud</em> lo es más.
+                <em>the money</em> it is importan but <em>health</em>  its more.
             </p>
         </div>
     </section>
 
     <section>
         <h2>Subscript</h2>
-        <p>El elemento HTML define un fragmento de texto que se debe mostrar, por razones tipográficas, más bajo, y generalmente más pequeño, que el tramo principal del texto, es decir, en subíndice
-        <br>Sus etiquetas son: <code>&lt;sub&gt; &lt;/sub&gt;</code>
+        <p>The HTML element defines a piece of text that must be displayed, for typographic reasons, lower, and generally smaller, than the main section of the text, that is, in subscript
+        <br>its labels are: <code>&lt;sub&gt; &lt;/sub&gt;</code>
         </p>
         <br>
         <br>
-        <div style="background:rgb(239, 241, 228)">Ejemplo:<hr>
+        <div style="background:rgb(239, 241, 228)">Exemple:<hr>
             <p>
-                <sub>El dinero</sub> es importante pero <sub>la salud</sub> lo es más.
+                <sub>the money</sub> it is importan but <sub>health</sub> its more.
             </p>
         </div>
     </section>
 
     <section>
         <h2>Subscript</h2>
-        <p>El elemento HTML define un fragmento de texto que se debe mostrar, por razones tipográficas, más alto, y generalmente más pequeño, que el tramo principal del texto, es decir, en superíndice.
-        <br>Sus etiquetas son: <code>&lt;sup&gt; &lt;/sup&gt;</code>
+        <p>The HTML element defines a piece of text that should be displayed, for typographic reasons, higher, and generally smaller, than the main section of the text, that is, in superscript.
+        <br>its labels are: <code>&lt;sup&gt; &lt;/sup&gt;</code>
         </p>
         <br>
         <br>
-        <div style="background:rgb(239, 241, 228)">Ejemplo:<hr>
+        <div style="background:rgb(239, 241, 228)">Exemple:<hr>
             <p>
-                <sup>El dinero</sup> es importante pero <sup>la salud</sup> lo es más.
+                <sup>the money</sup> it is importan but <sup>health</sup>  its more.
             </p>
         </div>
     </section>
