--- a/html-cheat-sheet/Pages/containers.html
+++ b/html-cheat-sheet/Pages/containers.html
@@ -14,16 +14,16 @@
     <section>
         <h2>Blockquote</h2>
 
-        <p>blockquote -cita en bloque . Crea citas en bloque, marca las citas a otros autores o documento</p>
+        <p>blockquote - block quote. Create block citations, mark citations to other authors or document</p>
         <br>
         <br>
-        <Article style="background:rgb(239, 241, 228)">Ejemplo:<hr>
+        <Article style="background:rgb(239, 241, 228)">Exemple:<hr>
             &lt;blockquote cite='http://html.conclase.net/w3c/html401...def-BLOCKQUOTE'&gt; <br>
             &lt;p&gt; <br>
-            <strong>Nota.</strong> Recomendamos que las implementaciones de hojas <br>
-            de estilo porporcionen un mecanismo para insertar signos de puntuación de citas<br>
-            antes y después de una cita delimitada por un BLOCKQUOTE de un modo apropiado según <br>
-            el contexto del idioma actual y el grado de anidamiento de las citas. <br>
+            <strong>Note.</strong> We recommend that leaf implementations <br>
+            style provide a mechanism for inserting punctuation marks from quotes <br>
+            before and after an appointment delimited by a BLOCKQUOTE in an appropriate way according to <br>
+            the context of the current language and the degree of nesting of citations.<br>
             &lt;/p&gt; <br>
             &lt;/blockquote&gt; <br>
         </Article>
@@ -31,23 +31,23 @@
 
     <section>
         <h2>Div</h2>
-        <p>El div sirve para crear seciones o agrupar contenido</p>
+        <p>The div is used to create sections or group content</p>
         <br>
         <br>
-        <Article style="background:rgb(239, 241, 228)">Ejemplo:<hr>
+        <Article style="background:rgb(239, 241, 228)">Exemple:<hr>
             &lt;div&gt; <br>
-            &lt;p>esto es un parrafo dentro de un div&lt;/p&gt; <br>
-            &lt;p>esto es otro parrafo diferente dentro del mismo div&lt;/p&gt; <br>
+            &lt;p&gt;this is a paragraph inside a div&lt;/p&gt; <br>
+            &lt;p&gt;this is another different paragraph within the same div&lt;/p&gt; <br>
             &lt;/div&gt;
         </Article>
     </section>
 
     <section>
         <h2>Area</h2>
-        <p>Sirve para crear las distintas secciones en las que se puede dividir un mapas de imágenes en el cliente.</p>
+        <p>It is used to create the different sections into which an image map can be divided on the client.</p>
         <br>
         <br>
-        <Article style="background:rgb(239, 241, 228)">Ejemplo:<hr>
+        <Article style="background:rgb(239, 241, 228)">Exemple:<hr>
             &lt;map name="map1"&gt; <br>
             &lt;area href="http://www.mozilla.com/firefox/"
             alt="El navegador"
@@ -66,10 +66,10 @@
 
     <section>
         <h2>Section</h2>
-        <section>El elemento de HTML section (&lt;section&gt;) representa una sección genérica de un documento. Sirve para determinar qué contenido corresponde a qué parte de un esquema</section>
+        <section>The HTML section element(&lt;section&gt;) represents a generic section of a document. It is used to determine which content corresponds to which part of a schema</section>
         <br>
         <br>
-        <Article style="background:rgb(239, 241, 228)">Ejemplo:<hr>
+        <Article style="background:rgb(239, 241, 228)">Exemple:<hr>
             &lt;section&gt; <br>
             &lt;h1&gt;Encabezado&lt;/h1&gt; <br>
             &lt;p&gt;Un montón de contenido impresionante.&lt;/p&gt; <br>
@@ -79,49 +79,49 @@
 
     <section>
         <h2>Aside</h2>
-        <section>El elemento HTML &lt;aside&gt; representa una sección de una página que consiste en contenido que está indirectamente relacionado con el contenido principal del documento. </section>
+        <section>The HTML element &lt;aside&gt; represents a section of a page that consists of content that is indirectly related to the main content of the document. </section>
         <br>
         <br>
-        <Article style="background:rgb(239, 241, 228)">Ejemplo:<hr>
+        <Article style="background:rgb(239, 241, 228)">Exemple:<hr>
             &lt;Aside&gt; <br>
-            &lt;h2&gt;Encabezado&lt;/h2&gt; <br>
-            &lt;p&gt;Un montón de contenido indirectamente relacionado.&lt;/p&gt; <br>
+            &lt;h2&gt;Header&lt;/h2&gt; <br>
+            &lt;p&gt;Lots of indirectly related content.&lt;/p&gt; <br>
             &lt;/Aside&gt;
             </Article>
     </section>
 
     <section>
         <h2>Paragraphs</h2>
-        <section>El elemento p (párrafo) es el apropiado para distribuir el texto en párrafos.
+        <section>The element p (paragraph) is appropriate to distribute the text in paragraphs.
         </section>
         <br>
         <br>
-        <Article style="background:rgb(239, 241, 228)">Ejemplo:<hr>
+        <Article style="background:rgb(239, 241, 228)">Exemple:<hr>
             &lt;p&gt; <br>
-            Esto es un párrafo <br>
+            this is a paragraphs<br>
             &lt;/p&gt;
         </Article>
     </section>
 
     <section>
         <h2>Article</h2>
-        <section>El Elemento article de HTML (&lt;article&gt;) representa una composición auto-contenida en un documento, página, una aplicación o en el sitio, que se destina a distribuir de forma independiente o reutilizable, por ejemplo, en la indicación.</section>
+        <section>The HTML article Element (&lt;article&gt;) represents a self-contained composition in a document, page, an application or on the site, which is intended to be distributed independently or reusable, for example, in the indication.</section>
         <br>
         <br>
-        <Article style="background:rgb(239, 241, 228)">Ejemplo:<hr>
+        <Article style="background:rgb(239, 241, 228)">Exemple:<hr>
             &lt;Article&gt; <br>
             &lt;h2&gt;Google Chrome&lt;/h2&gt; <br>
-            &lt;p&gt;Google Chrome es un navegador web desarrollado por Google, lanzado en 2008. ¡Chrome es el navegador web más popular del mundo en la actualidad!&lt;/p&gt; <br>
+            &lt;p&gt;Google Chrome is a web browser developed by Google, released in 2008. Chrome is the most popular web browser in the world today!&lt;/p&gt; <br>
             &lt;/Article&gt;
         </Article>
     </section>
 
     <section>
         <h2>Nav</h2>
-        <section>El elemento HTML &lt;nav&gt; representa una sección de una página cuyo propósito es proporcionar enlaces de navegación, ya sea dentro del documento actual o a otros documentos.</section>
+        <section>The HTML element &lt;nav&gt;represents a section of a page whose purpose is to provide navigation links, either within the current document or to other documents.</section>
         <br>
         <br>
-        <Article style="background:rgb(239, 241, 228)">Ejemplo:<hr>
+        <Article style="background:rgb(239, 241, 228)">Exemple:<hr>
             &lt;nav class="menu"&gt; <br>
                 &lt;ul&gt; <br>
                 &lt;li&gt;<a href="#">Inicio</a>&lt;/li&gt; <br>
@@ -135,10 +135,10 @@
 
     <section>
         <h2>Footer</h2>
-        <section>El Elemento HTML Footer (&lt;footer&gt;) representa un pie de página para el contenido de sección más cercano o el elemento  raíz de sección </section>
+        <section>The HTML element Footer (&lt;footer&gt;) renders a footer for the closest section content or section root element </section>
         <br>
         <br>
-        <Article style="background:rgb(239, 241, 228)">Ejemplo:<hr>
+        <Article style="background:rgb(239, 241, 228)">Exemple:<hr>
 
             &lt;p&gt; Si actuas como victima seras tratado como tal &lt;/p&gt; <br>
             &lt;footer&gt; <br>
@@ -151,10 +151,10 @@
 
     <section>
         <h2>Template</h2>
-        <section>El elemento HTML &lt;template&gt; es un mecanismo para mantener el contenido HTML del lado del cliente que no se renderiza cuando se carga una página, pero que posteriormente puede ser instanciado durante el tiempo de ejecución empleando JavaScript</section>
+        <section>The HTML element &lt;template&gt; is a mechanism for maintaining client-side HTML content that is not rendered when a page is loaded, but can later be instantiated at runtime using JavaScript</section>
         <br>
         <br>
-        <Article style="background:rgb(239, 241, 228)">Ejemplo:<hr>
+        <Article style="background:rgb(239, 241, 228)">Exemple:<hr>
 
             &lt;template &gt; <br>
 
