--- a/html-cheat-sheet/Pages/graphics.html
+++ b/html-cheat-sheet/Pages/graphics.html
@@ -11,12 +11,12 @@
     <h1 style="text-align: center;">Graphics</h1>
     <section>
         <h2>SVG</h2>
-        <section>El elemento svg es un contenedor que define un nuevo sistema de coordenadas y viewport.
+        <section>The svg element is a container that defines a new coordinate system and viewport.
             <br>
-            Es usado como el elemento más externo de cualquier documento SVG, pero también puede ser usado para agregar un fragmento de un SVG dentro de un documento SVG o HTML.</section>
+            It is used as the outermost element of any SVG document, but it can also be used to add an SVG fragment into an SVG or HTML document.</section>
         <br>
         <br>
-        <Article style="background:rgb(239, 241, 228)">Ejemplo:<hr>
+        <Article style="background:rgb(239, 241, 228)">Exemple:<hr>
         <code>
             &lt;svg width="150" height="100" viewBox="0 0 3 2"&gt; <br>
                 &lt;rect width="1" height="2" x="0" fill="#008d46" /&gt; <br>
@@ -34,11 +34,11 @@
 
     <section>
         <h2>Canvas</h2>
-        <section>El elemento HTML se utiliza para dibujar gráficos, sobre la marcha, a través de JavaScript. <br>
-        El elemento es solo un contenedor de gráficos. Debe utilizar JavaScript para dibujar los gráficos.</section>
+        <section>The HTML element is used to draw graphics, on the fly, via JavaScript. <br>
+            The element is just a graphics container. You must use JavaScript to draw the graphics.</section>
         <br>
         <br> <code>&lt;button&gt;</code>
-        <Article style="background:rgb(239, 241, 228)">Ejemplo:<hr>
+        <Article style="background:rgb(239, 241, 228)">Exemple:<hr>
             <code>&lt;canvas id="myCanvas" width="200" height="100"&gt;&lt;/canvas &gt; </code>
             <br>
             <canvas style="background-color: white;" id="myCanvas" width="200" height="100"></canvas>
