--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/buttontypes.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/buttontypes.html
@@ -52,7 +52,7 @@ Two <strong>button</strong> elements that act as one submit button and one reset
         <br>
         <br>
         <a
-            href="input-types.html">Return</a>
+            href="/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/input-types.html">Return</a>
     </section>
 </body>
 
