--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/color.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/color.html
@@ -49,7 +49,7 @@ Show a color picker (with a predefined red value):
         <br>
         <br>
         <a
-            href="input-types.html">Return</a>
+            href="/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/input-types.html">Return</a>
     </section>
 </body>
 
