--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/email.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/email.html
@@ -64,7 +64,7 @@ Define a field for an e-mail address (validates automatically when submitted):
         <br>
         <br>
         <a
-            href="input-types.html">Return</a>
+            href="/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/input-types.html">Return</a>
     </section>
 </body>
 
