--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/image.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/image.html
@@ -59,7 +59,7 @@ Define an image as a submit button:
         <br>
         <br>
         <a
-            href="input-types.html">Return</a>
+            href="/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/input-types.html">Return</a>
     </section>
 </body>
 
