--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/month.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/month.html
@@ -53,7 +53,7 @@
         <br>
         <br>
         <a
-            href="input-types.html">Return</a>
+            href="/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/input-types.html">Return</a>
     </section>
 </body>
 
