--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/number.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/number.html
@@ -56,7 +56,7 @@ Define a field for entering a number (You can also set restrictions on what numb
         <br>
         <br>
         <a
-            href="input-types.html">Return</a>
+            href="/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/input-types.html">Return</a>
     </section>
 </body>
 
