--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/submit.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/submit.html
@@ -52,7 +52,7 @@ Define a submit button:
         <br>
         <br>
         <a
-            href="input-types.html">Return</a>
+            href="/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/input-types.html">Return</a>
     </section>
 </body>
 
