--- a/html-cheat-sheet/Pages/Forms/forms.html
+++ b/html-cheat-sheet/Pages/Forms/forms.html
@@ -44,7 +44,7 @@
             <br>
         </div>
         <br>
-        <a href="/Users/marceldurgante/Documents/Assembler/html-cheat-sheet2-/html-cheat-sheet/index.html">Return</a>
+        <a href="/html-cheat-sheet/index.html">Return</a>
     </section>
 </body>
 </html>
