--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Attributes/heightandwidth.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Attributes/heightandwidth.html
@@ -28,16 +28,12 @@
                     height="200"&gt;
                 </pre>
             </code>
-
-            <embed type="image/png"
-                src="https://github.com/MarcelDurgante/html-cheat-sheet/blob/main/Images/pic_trulli.png?raw=true"
-                width="300"
-                height="200">
+            <img src="/html-cheat-sheet/Media/pic_trulli.png" alt="a white house" width="300px" height="200px">
         </div>
         <br>
         <br>
         <a
-            href="/Users/marceldurgante/Documents/Assembler/html-cheat-sheet2-/html-cheat-sheet/Pages/Forms/Form Pages/Input Attributes/input-attributes.html">Return</a>
+            href="/html-cheat-sheet/Pages/Forms/Form Pages/Input Attributes/input-attributes.html">Return</a>
     </section>
 </body>
 
