--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/checkbox.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/checkbox.html
@@ -49,7 +49,7 @@ Let the user select one or more options of a limited number of choices:
         <br>
         <br>
         <a
-            href="input-types.html">Return</a>
+            href="/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/input-types.html">Return</a>
     </section>
 </body>
 
