--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/hidden.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/hidden.html
@@ -54,7 +54,7 @@ Define a hidden field:
         <br>
         <br>
         <a
-            href="input-types.html">Return</a>
+            href="/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/input-types.html">Return</a>
     </section>
 </body>
 
