--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/input-types.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/input-types.html
@@ -98,7 +98,7 @@
         <br>
         <br>
         <a
-            href="input-types.html">Return</a>
+            href="/html-cheat-sheet/Pages/Forms/forms.html">Return</a>
 
     </section>
 
