--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/password.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/password.html
@@ -52,7 +52,7 @@
         <br>
         <br>
         <a
-            href="input-types.html">Return</a>
+            href="/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/input-types.html">Return</a>
     </section>
 </body>
 
