--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/range.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/range.html
@@ -55,7 +55,7 @@ Define a range control (like a slider control):
         <br>
         <br>
         <a
-            href="input-types.html">Return</a>
+            href="/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/input-types.html">Return</a>
     </section>
 </body>
 
