--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/text.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/text.html
@@ -51,7 +51,7 @@ Define a single-line text field that a user can enter text into:
         <br>
         <br>
         <a
-            href="input-types.html">Return</a>
+            href="/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/input-types.html">Return</a>
     </section>
 </body>
 
