--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/url.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/url.html
@@ -51,7 +51,7 @@ Define a field for entering a URL:
         <br>
         <br>
         <a
-            href="input-types.html">Return</a>
+            href="/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/input-types.html">Return</a>
     </section>
 </body>
 
